Work on Exec Sum

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Test/Executive.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Test/Executive.cshtml
@@ -2,8 +2,20 @@
     ViewBag.Title = "Executive Summary";
 }
 
-<div id="gridMTD"></div>
-<div id="gridPrev"></div>
+<div id="client_bar_exec">
+<div id="container">
+    <div class="exec_charts">
+        <section>
+            <div id="gridMTD"></div>
+        </section>
+        <section>
+            <div id="gridPrev"></div>
+        </section>
+        </div>
+        <div class="client_logo_exec"></div>
+        <div class="client_name_exec">Monterey Bay Aquarium</div>
+    </div>
+</div>
 
 @section scripts {
 <script>
