--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -1,100 +1,157 @@
-﻿@model ClientPortal.Web.Models.UserInfo
+﻿@model ClientPortal.Web.Areas.Prog.Models.ExecSumVM
 @{
     ViewBag.Title = "Executive Summary";
+    var mtd = Model.MTDStat;
+    var prev = Model.LastMonthStat;
 }
 
-
-<div id="client_bar">
-	<div id="container">
-		<div class="client_logo"></div>
-        <div class="client_name">@Model.ProgAdvertiser.Name</div>
+<div id="client_bar_exec">
+<div id="container">
+    <div class="exec_charts">
+        @* TODO: Put in separate partial view... *@
+        <section>
+            <div class="heading"><p>Month to Date: @mtd.StartDate.ToShortDateString() thru @mtd.Date.ToShortDateString()</p></div>
+            <div class="grid">
+                <table class="grid" cellspacing="0" width="100%">
+                    <thead>
+                        <tr class="exec">
+                            <th>Budget</th>
+                            <th>Spend</th>
+                            <th>Pacing</th>
+                            <th>Impressions</th>
+                            <th>Clicks</th>
+                            <th>CTR</th>
+                            <th>eCPC</th>
+                            <th>Conversions</th>
+                            <th>eCPA</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="grey_row">
+                            <td>@mtd.Budget.ToString("C")</td>
+                            <td>@mtd.MediaSpend.ToString("C")</td>
+                            <td>@mtd.Pacing.ToString("0.00%")</td>
+                            <td>@mtd.Impressions.ToString("N0")</td>
+                            <td>@mtd.Clicks.ToString("N0")</td>
+                            <td>@mtd.CTR.ToString("0.00%")</td>
+                            <td>@mtd.eCPC.ToString("C")</td>
+                            <td>@mtd.Conversions.ToString("N0")</td>
+                            <td>@mtd.eCPA.ToString("C")</td>
+                        </tr>
+		            </tbody>
+                </table>
+            </div>
+        </section>
+        <section>
+            <div class="heading"><p>Previous Month: @prev.StartDate.ToShortDateString() thru @prev.Date.ToShortDateString()</p></div>
+            <div class="grid">
+                <table class="grid" cellspacing="0" width="100%">
+                    <thead>
+                        <tr class="exec">
+                            <th>Budget</th>
+                            <th>Spend</th>
+                            <th>Pacing</th>
+                            <th>Impressions</th>
+                            <th>Clicks</th>
+                            <th>CTR</th>
+                            <th>eCPC</th>
+                            <th>Conversions</th>
+                            <th>eCPA</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="grey_row">
+                            <td>@prev.Budget.ToString("C")</td>
+                            <td>@prev.MediaSpend.ToString("C")</td>
+                            <td>@prev.Pacing.ToString("0.00%")</td>
+                            <td>@prev.Impressions.ToString("N0")</td>
+                            <td>@prev.Clicks.ToString("N0")</td>
+                            <td>@prev.CTR.ToString("0.00%")</td>
+                            <td>@prev.eCPC.ToString("C")</td>
+                            <td>@prev.Conversions.ToString("N0")</td>
+                            <td>@prev.eCPA.ToString("C")</td>
+                        </tr>
+		            </tbody>
+                </table>
+            </div>
+        </section>
+        </div>
+        <div class="client_logo_exec"></div>
+        <div class="client_name_exec">@Model.UserInfo.ProgAdvertiser.Name</div>
     </div>
 </div>
+
 <div id="page_content">
     <div id="container">
-    	<div id="page_content">
-		    <section>
-<div id="gridMTD"></div>
-<div id="gridPrevMonth"></div>
-<div class="heading"><p>Campaign to Date</p></div>
-<span>Spend</span><div id="spendTD"></div>
-<span>Impressions</span><div id="ImpressionTD"></div>
-<span>Clicks</span><div id="ClickTD"></div>
-<span>Conversions</span><div id="ConversionTD"></div>
-<div class="heading"><p>Campaign to Date eCPA Trend</p></div>
-<div id="trendECPA"</div>
-            </section>
+        <div id="page_content_exec">
+            <div id="exec_leftbar">
+                <div class="heading"><p>Campaign to Date</p></div>
+                <div class="content_box2">
+                    <ul class="exec_leftchart">
+                        <li class="axis">
+                            <div class="label">Spend</div>
+                            <div class="biglabel">$??.?K</div>
+                        </li>
+                        <li>
+                            <div class="exec_spark" id="sparkSpend"></div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content_box2">
+                    <ul class="exec_leftchart">
+                        <li class="axis">
+                            <div class="label">Impressions</div>
+                            <div class="biglabel">?.?M</div>
+                        </li>
+                        <li>
+                            <div class="exec_spark" id="sparkImpressions"></div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content_box2">
+                    <ul class="exec_leftchart">
+                        <li class="axis">
+                            <div class="label">Clicks</div>
+                            <div class="biglabel">?.?K</div>
+                        </li>
+                        <li>
+                            <div class="exec_spark" id="sparkClicks"></div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="content_box2">
+                    <ul class="exec_leftchart">
+                        <li class="axis">
+                            <div class="label">Conversions</div>
+                            <div class="biglabel">?</div>
+                        </li>
+                        <li>
+                            <div class="exec_spark" id="sparkConversions"></div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div id="exec_right">
+                @* <section... *@
+            </div>
         </div>
     </div>
 </div>
 
+<div id="gridMTD"></div>
+<div id="gridPrevMonth"></div>
+
+@*<div id="ClickTD"></div>
+<div id="ConversionTD"></div>*@
+
+<div id="trendECPA"></div>
+
 @section scripts {
 <script>
     $(document).ready(function () {
-        SetupGrids();
         SetupSparklineCharts();
-        SetupMainChart();
+        //SetupMainChart();
     });
-
-    function SetupGrids()
-    {
-        $("#gridMTD").kendoGrid({
-            columns: [
-            {
-                
-                title: "Month to Date: x/1/2016 thru x/x/2016",
-                columns: [
-                { field: "Budget" },
-                { field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Pacing", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Impressions" },
-                { field: "Clicks" },
-                { field: "CTR", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "eCPC", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Conversions" },
-                { field: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                ]
-            }
-            ],
-            dataSource: {
-                transport: {
-                    read: {
-                        type: 'post',
-                        dataType: 'json',
-                        url: '@Url.Action("ExecMTD", "Stats")',
-                    }
-                }
-            }
-        });
-
-        $("#gridPrevMonth").kendoGrid({
-            columns: [
-            {
-                title: "Previous Month: x/1/2016 thru x/x/2016",
-                columns: [
-                { field: "Budget" },
-                { field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Pacing", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Impressions" },
-                { field: "Clicks" },
-                { field: "CTR", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "eCPC", format: "{0:$###,###,###,###,###,###,###,###.##}" },
-                { field: "Conversions" },
-                { field: "eCPA", format: "{0:$###,###,###,###,###,###,###,###.##}" }
-                ]
-            }
-            ],
-            dataSource: {
-                transport: {
-                    read: {
-                        type: 'post',
-                        dataType: 'json',
-                        url: '@Url.Action("ExecLastMonth", "Stats")',
-                    }
-                }
-            }
-        });
-    }
 
     function SetupMainChart()
     {
@@ -136,13 +193,11 @@
 
     function SetupSparklineCharts()
     {
-        $("#spendTD").kendoSparkline({
+        $("#sparkSpend").kendoSparkline({
             type: "area",
-            lineColor: '#2424e2',
-            fillColor: '#abbad8',
-            series: [{
-                field: "MediaSpend", title: "Spend", format: "{0:$###,###,###,###,###,###,###,###.##}"
-            }],
+            series: [
+                { field: "MediaSpend", color: "rgb(13, 141, 214)", tooltip: { format: "{0:C}" } }
+            ],
             dataSource: {
                 transport: {
                     read: {
@@ -153,13 +208,11 @@
                 }
             }
         });
-        $("#ImpressionTD").kendoSparkline({
+        $("#sparkImpressions").kendoSparkline({
             type: "area",
-            lineColor: '#2424e2',
-            fillColor: '#abbad8',
-            series: [{
-                field: "Impressions", title: "Impression", format: "{0:$###,###,###,###,###,###,###,###.##}"
-            }],
+            series: [
+                { field: "Impressions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
+            ],
             dataSource: {
                 transport: {
                     read: {
@@ -170,13 +223,11 @@
                 }
             }
         });
-        $("#ClickTD").kendoSparkline({
+        $("#sparkClicks").kendoSparkline({
             type: "area",
-            lineColor: '#2424e2',
-            fillColor: '#abbad8',
-            series: [{
-                field: "Clicks", title: "Click"
-            }],
+            series: [
+                { field: "Clicks", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
+            ],
             dataSource: {
                 transport: {
                     read: {
@@ -187,13 +238,11 @@
                 }
             }
         });
-        $("#ConversionTD").kendoSparkline({
+        $("#sparkConversions").kendoSparkline({
             type: "area",
-            lineColor: '#2424e2',
-            fillColor: '#abbad8',
-            series: [{
-                field: "Conversions", title: "Conversion"
-            }],
+            series: [
+                { field: "Conversions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
+            ],
             dataSource: {
                 transport: {
                     read: {
