--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Index.cshtml
@@ -134,8 +134,8 @@
             <div id="exec_right">
                 <section>
                     <div class="heading"><p>Pacing Month to Date</p></div>
-                    <div class="content_box" style="height:205px">
-                        gauge...<br />gauge...<br />gauge...<br />gauge...<br />gauge...<br />gauge...
+                    <div class="content_box">
+                        <div id="pacingGauge" style="height:205px"></div>
                     </div>
                 </section>
                 <section>
@@ -152,11 +152,34 @@
 @section scripts {
 <script>
     $(document).ready(function () {
+        SetupPacingGauge();
         var datasource = GetDataSourceCTD();
         SetupSparklineCharts(datasource);
         SetupMainChart(datasource);
         datasource.read();
     });
+
+    function SetupPacingGauge() {
+        $('#pacingGauge').kendoChart({
+@*            title: "@string.Format("Spend: {0:C} ({1:0.00%}) of {2:C0} Budgeted", Model.MTDStat.MediaSpend, Model.MTDStat.Pacing, Model.MTDStat.Budget)",*@
+            title: "@string.Format("Used {0:0.00%} of {1:C0} Budget", Model.MTDStat.Pacing, Model.MTDStat.Budget)",
+            tooltip: {
+                visible: true,
+                format: "C"
+            },
+            seriesDefaults: { type: "bar", color: "rgb(13, 141, 214)" },
+            series: [{
+                data: [@Model.MTDStat.MediaSpend]
+            }],
+            valueAxis: {
+                max: @Model.MTDStat.Budget,
+                labels: { format: "C0" }
+            },
+            //categoryAxis: {
+            //    categories: ["PacingX"]
+            //}
+        });
+    }
 
     function GetDataSourceCTD() {
         return new kendo.data.DataSource({
@@ -164,7 +187,7 @@
                 read: {
                     type: 'post',
                     dataType: 'json',
-                    url: '@Url.Action("DailyCTD", "Stats", new { advId = @Model.UserInfo.ProgAdvertiser.Id })',
+                    url: '@Url.Action("DailyCTD", "Stats")',
                 }
             },
             schema: {
@@ -178,13 +201,14 @@
             }
         });
     }
+
     function SetupMainChart(datasource)
     {
         $("#trendECPA").kendoChart({
             dataSource: datasource,
             autoBind: false,
             series: [
-                { field: "eCPA", type: "area", color: "rgb(13, 141, 214)", tooltip: { format: "{0:C}" } }
+                { field: "eCPA", type: "area", color: "rgb(13, 141, 214)" }
             ],
             categoryAxis: {
                 field: "Date",
@@ -195,7 +219,10 @@
             valueAxis: [
                 { labels: { format: "C" } }
             ],
-            tooltip: { visible: true }
+            tooltip: {
+                visible: true,
+                template: "#= kendo.format('{0:d}',category) #: #= kendo.format('{0:C}',value) #"
+            }
         });
     }
 
@@ -205,33 +232,29 @@
             dataSource: datasource,
             autoBind: false,
             type: "area",
-            series: [
-                { field: "MediaSpend", color: "rgb(13, 141, 214)", tooltip: { format: "{0:C}" } }
-            ]
+            series: [{ field: "MediaSpend", color: "rgb(13, 141, 214)", tooltip: { format: "{0:C}" } }],
+            categoryAxis: { field: "Date" }
         });
         $("#sparkImpressions").kendoSparkline({
             dataSource: datasource,
             autoBind: false,
             type: "area",
-            series: [
-                { field: "Impressions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
-            ]
+            series: [{ field: "Impressions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }],
+            categoryAxis: { field: "Date" }
         });
         $("#sparkClicks").kendoSparkline({
             dataSource: datasource,
             autoBind: false,
             type: "area",
-            series: [
-                { field: "Clicks", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
-            ]
+            series: [{ field: "Clicks", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }],
+            categoryAxis: { field: "Date" }
         });
         $("#sparkConversions").kendoSparkline({
             dataSource: datasource,
             autoBind: false,
             type: "area",
-            series: [
-                { field: "Conversions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }
-            ]
+            series: [{ field: "Conversions", color: "rgb(13, 141, 214)", tooltip: { format: "{0:N0}" } }],
+            categoryAxis: { field: "Date" }
         });
     }
 </script>
