--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
@@ -5,11 +5,11 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css' />
 <link href='~/Content/progstyle.css' rel="stylesheet" type="text/css" />
 
-<link href="http://kendo.cdn.telerik.com/2016.1.406/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
-<link href="http://kendo.cdn.telerik.com/2016.1.406/styles/kendo.bootstrap.min.css" rel="stylesheet" />
+<link href="https://kendo.cdn.telerik.com/2016.1.406/styles/kendo.common-bootstrap.min.css" rel="stylesheet" />
+<link href="https://kendo.cdn.telerik.com/2016.1.406/styles/kendo.bootstrap.min.css" rel="stylesheet" />
 
-<script src="http://kendo.cdn.telerik.com/2016.1.406/js/jquery.min.js"></script>
-<script src="http://kendo.cdn.telerik.com/2016.1.406/js/kendo.all.min.js"></script>
+<script src="https://kendo.cdn.telerik.com/2016.1.406/js/jquery.min.js"></script>
+<script src="https://kendo.cdn.telerik.com/2016.1.406/js/kendo.all.min.js"></script>
 </head>
 
 <body>
