--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Shared/_Layout.cshtml
@@ -14,13 +14,13 @@
 
 <body>
 <div id="header">
-	<div id="container">
-    	<div class="logo">&nbsp;</div>
+    <div id="container">
+        <div class="logo">&nbsp;</div>
         <div class="nav">
-        	<ul class="navbar">
-            	<li class="nav1"><a href="#">Executive<br />Summary</a></li>
+            <ul class="navbar">
+                <li class="nav1"><a href="@Url.Action("Index", "Home")">Executive<br />Summary</a></li>
                 <li class="nav2"><a href="#">Strategy<br />Summary</a></li>
-                <li class="nav2"><a href="#">Weekly<br />Summary</a></li>
+                <li class="nav2"><a href="@Url.Action("Weekly", "Home")">Weekly<br />Summary</a></li>
                 <li class="nav3"><a href="#">Creative<br />Performance</a></li>
                 <li class="nav4"><a href="#">Top 50<br />Site List</a></li>
                 <li class="nav4"><a href="#">Lead<br />IDs</a></li>
