--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Weekly.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Prog/Views/Home/Weekly.cshtml
@@ -3,13 +3,7 @@
     ViewBag.Title = "Weekly Summary";
 }
 
-<div id="client_bar">
-	<div id="container">
-		<div class="client_logo"></div>
-        <div class="client_name">@Model.UserInfo.ProgAdvertiser.Name</div>
-        <div class="page_title">Weekly Summary</div>
-    </div>
-</div>
+@Html.Partial("_ClientBar", Model.UserInfo)
 <div id="page_content">
 	<div id="container">
     	<div id="page_content">
